webroot/reports/udd/ui/css/udd.css
/*
 * Copyright (c) 2014 Juniper Networks, Inc. All rights reserved.
 */

.btn {
  border: none;
}

.noselect {
  -webkit-touch-callout: none;
  -webkit-user-select: none;
  -khtml-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none; }

#menu .new-dashboard {
  text-align: center;
}
#menu .new-dashboard:before, #menu .new-dashboard:after {
  display: none;
}
#menu .new-dashboard a {
  padding-left: 0;
  padding-right: 0;
}
.new-widget {
  position: fixed;
  right: 0;
  z-index: 13;
  line-height: 40px;
  border-left: 1px solid #ccc;
  padding: 0 16px;
}
#content-container .area {
  width: 100%;
  padding: 8px 0;
}
#content-container .contrail-tabs-classic .ui-tabs-panel.ui-widget-content, .contrail-widget-tabs .ui-tabs-panel.ui-widget-content {
  padding: 0;
}
#content-container .placeholder {
  display: block;
  margin: 8px;
  text-align: center;
  border: 1px dashed #ccc;
  color: #ccc;
  font-size: 72px;
  line-height: 56px;
}
#content-container .area .grid-stack .grid-stack-item,
#content-container .area .grid-stack .grid-stack-item *,
#content-container .area .grid-stack .grid-stack-item *:before,
#content-container .area .grid-stack .grid-stack-item *:after {
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  box-sizing: border-box;
}
#content-container .area .grid-stack .grid-stack-item .widget {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 4px;
  right: 4px;
  border: 1px solid #ddd;
  border-radius: 0;
  margin: 0;
}
#content-container .area .grid-stack .grid-stack-item .ui-resizable-handle {
  right: 8px;
  bottom: 5px;
}
#content-container .area .grid-stack .widget.panel .panel-heading,
#content-container .area .grid-stack .widget.panel .panel-footer {
  position: absolute;
  display: flex;
  justify-content: flex-start;
  width: 100%;
  height: 36px;
  line-height: 36px;
  padding: 0 8px;
}
#content-container .area .grid-stack .widget.panel .panel-heading .config-title {
  flex: none;
  font-weight: bold;
}
#content-container .area .grid-stack .widget.panel .panel-heading .title {
  display: inline-block;
  flex: 1 1 auto;
  white-space: nowrap;
  overflow: hidden;
  padding-left: 4px;
}
#content-container .area .grid-stack .widget.panel .panel-heading .edit-title {
  padding-left: 4px;
  width: 80%;
}
#content-container .area .grid-stack .widget.panel .panel-heading .close,
#content-container .area .grid-stack .widget.panel .panel-heading .config {
  flex: none;
  line-height: 36px;
  color: #898989;
  opacity: 1;
  padding: 0 8px;
}
#content-container .area .grid-stack .widget.panel .panel-heading .close {
  line-height: 36px;
  font-size: 12px;
}
#content-container .area .grid-stack .widget.panel .panel-heading .close:hover {
  color: red;
}
#content-container .area .grid-stack .widget.panel .panel-heading input {
  display: none;
  position: absolute;
  top: 5px;
}
#content-container .area .grid-stack .widget.panel .panel-body {
  position: absolute;
  width: 100%;
  overflow: auto;
  top: 36px;
  bottom: 36px;
  padding: 10px;
}
#content-container .area .grid-stack .widget.panel .panel-body .data-config,
#content-container .area .grid-stack .widget.panel .panel-body .content-config,
#content-container .area .grid-stack .widget.panel .panel-body .content-view {
  display: none;
}
#content-container .area .grid-stack .widget.panel ul.nav-pills {
  text-align: center;
}
#content-container .area .grid-stack .widget.panel ul.nav-pills li {
  float: none;
  display: inline-block;
}
#content-container .area .grid-stack .widget.panel .panel-footer {
  bottom: 0;
}
#content-container .area .grid-stack .widget.panel .panel-footer .btn {
  margin-left: 8px;
}
#content-container .area .grid-stack .widget.panel .panel-footer .reset {
  padding-left: 0;
}

#content-container .chart {
  width: 100%;
  height: 100%;
  margin: 20px 0;
  padding: 0px;
}
#content-container .chart svg {
  display: block;
  width: 100%;
  min-height: 300px;
  margin: 20px 0;
  padding: 0px;
}
#content-container .chart text {
  font: 12px sans-serif;
}

